--- a/src/components/Hossii/SpaceHossiiConnectionHandle.module.css
+++ b/src/components/Hossii/SpaceHossiiConnectionHandle.module.css
@@ -1,7 +1,7 @@
 .handle {
   position: absolute;
-  top: 8px;
-  right: -6px;
+  top: 4px;
+  right: -10px;
   z-index: 2;
   width: 2.75rem;
   height: 2.75rem;
